# claudeship

./: Cargo.toml  README.md  dist-workspace.toml
src/: git.rs  input.rs  main.rs
tests/: input.json  integration.rs
