[package]
name = "claudeship"
version = "0.1.1"
edition = "2024"
description = "A custom statusline for Claude Code"
license = "MIT"
repository = "https://github.com/koenpunt/claudeship"
readme = "README.md"
keywords = ["claude", "statusline", "cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
colorize = "0.1"
